--- a/hardware/line-sensor/line-sensor-r2-var1a.ioc
+++ b/hardware/line-sensor/line-sensor-r2-var1a.ioc
@@ -170,45 +170,55 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32L151VETx
 ProjectManager.FirmwarePackage=STM32Cube FW_L1 V1.8.1
-ProjectManager.FreePins=false
+ProjectManager.FreePins=true
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=0
+ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=line-sensor-mcu.ioc
-ProjectManager.ProjectName=line-sensor-mcu
+ProjectManager.ProjectFileName=line-sensor-r2-var1a.ioc
+ProjectManager.ProjectName=line-sensor-r2-var1a
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true
-RCC.AHBFreq_Value=2097000
-RCC.APB1Freq_Value=2097000
-RCC.APB2Freq_Value=2097000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_ADC_Init-ADC-false-LL-true,4-MX_I2C1_Init-I2C1-false-LL-true,5-MX_SPI3_Init-SPI3-false-LL-true,6-MX_USART2_UART_Init-USART2-false-LL-true,7-MX_USART1_UART_Init-USART1-false-LL-true
+RCC.48MHZClocksFreq_Value=32000000
+RCC.AHBFreq_Value=32000000
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=32000000
+RCC.APB2Freq_Value=32000000
+RCC.APB2TimFreq_Value=32000000
+RCC.FCLKCortexFreq_Value=32000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=32000000
 RCC.HSE_VALUE=24000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,FamilyName,HSE_VALUE,HSI_VALUE,LSE_VALUE,LSI_VALUE,MSI_VALUE,PLLCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIMFreq_Value,VCOOutputFreq_Value
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,VCOOutputFreq_Value
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=37000
+RCC.MCOPinFreq_Value=32000000
 RCC.MSI_VALUE=2097000
-RCC.PLLCLKFreq_Value=24000000
+RCC.PLLCLKFreq_Value=32000000
+RCC.PLLMUL=RCC_PLL_MUL4
+RCC.PWRFreq_Value=32000000
 RCC.RTCFreq_Value=37000
 RCC.RTCHSEDivFreq_Value=12000000
-RCC.SYSCLKFreq_VALUE=2097000
-RCC.TIMFreq_Value=2097000
-RCC.VCOOutputFreq_Value=48000000
+RCC.SYSCLKFreq_VALUE=32000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TIMFreq_Value=32000000
+RCC.TimerFreq_Value=32000000
+RCC.VCOOutputFreq_Value=64000000
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,VirtualNSS
 SPI3.Mode=SPI_MODE_SLAVE
