- fixed delete task not setting parent's next task properly - added 3rd revision of line sensor PCB

--- a/hardware/line-sensor/var1a/line-sensor-var1a-r3.ioc
+++ b/hardware/line-sensor/var1a/line-sensor-var1a-r3.ioc
@@ -8,59 +8,58 @@ File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32L1
 Mcu.IP0=ADC
-Mcu.IP1=I2C1
+Mcu.IP1=IWDG
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
-Mcu.IP4=SPI3
+Mcu.IP4=SPI2
 Mcu.IP5=SYS
 Mcu.IP6=USART1
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IPNb=7
 Mcu.Name=STM32L151VETx
 Mcu.Package=LQFP100
-Mcu.Pin0=PC0
-Mcu.Pin1=PC1
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PC4
-Mcu.Pin13=PC5
-Mcu.Pin14=PB0
-Mcu.Pin15=PB1
-Mcu.Pin16=PB2
-Mcu.Pin17=PE7
-Mcu.Pin18=PE8
-Mcu.Pin19=PE9
-Mcu.Pin2=PC2
-Mcu.Pin20=PE10
-Mcu.Pin21=PB12
-Mcu.Pin22=PB13
-Mcu.Pin23=PB14
-Mcu.Pin24=PB15
-Mcu.Pin25=PA9
-Mcu.Pin26=PA10
-Mcu.Pin27=PA13
-Mcu.Pin28=PA14
-Mcu.Pin29=PA15
-Mcu.Pin3=PC3
-Mcu.Pin30=PC10
-Mcu.Pin31=PC11
-Mcu.Pin32=PC12
-Mcu.Pin33=PD5
-Mcu.Pin34=PD6
-Mcu.Pin35=PB3
-Mcu.Pin36=PB4
-Mcu.Pin37=PB5
-Mcu.Pin38=PB6
-Mcu.Pin39=PB7
-Mcu.Pin4=PA0-WKUP1
-Mcu.Pin40=VP_ADC_Channel3SpeedFast
-Mcu.Pin41=VP_ADC_Channel8SpeedFast
+Mcu.Pin0=PE6-WKUP3
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PA4
+Mcu.Pin14=PA5
+Mcu.Pin15=PA6
+Mcu.Pin16=PA7
+Mcu.Pin17=PC4
+Mcu.Pin18=PC5
+Mcu.Pin19=PB0
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PB1
+Mcu.Pin21=PB2
+Mcu.Pin22=PE7
+Mcu.Pin23=PE8
+Mcu.Pin24=PE9
+Mcu.Pin25=PE10
+Mcu.Pin26=PB12
+Mcu.Pin27=PB13
+Mcu.Pin28=PB14
+Mcu.Pin29=PB15
+Mcu.Pin3=PH0-OSC_IN
+Mcu.Pin30=PA9
+Mcu.Pin31=PA10
+Mcu.Pin32=PA13
+Mcu.Pin33=PA14
+Mcu.Pin34=PD0
+Mcu.Pin35=PD1
+Mcu.Pin36=PD3
+Mcu.Pin37=PD4
+Mcu.Pin38=PB3
+Mcu.Pin39=VP_ADC_Channel3SpeedFast
+Mcu.Pin4=PH1-OSC_OUT
+Mcu.Pin40=VP_ADC_Channel8SpeedFast
+Mcu.Pin41=VP_IWDG_VS_IWDG
 Mcu.Pin42=VP_SYS_VS_Systick
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA4
-Mcu.Pin9=PA5
+Mcu.Pin5=PC0
+Mcu.Pin6=PC1
+Mcu.Pin7=PC2
+Mcu.Pin8=PC3
+Mcu.Pin9=PA0-WKUP1
 Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -81,14 +80,12 @@ PA0-WKUP1.Mode=IN0
 PA0-WKUP1.Signal=ADC_IN0
 PA1.Mode=IN1
 PA1.Signal=ADC_IN1
-PA10.Mode=Asynchronous
+PA10.Mode=Multiprocessor_communication
 PA10.Signal=USART1_RX
-PA13.Locked=true
+PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
-PA14.Locked=true
+PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
-PA15.Mode=NSS_Signal_Hard_Input
-PA15.Signal=SPI3_NSS
 PA2.Mode=IN2
 PA2.Signal=ADC_IN2
 PA3.Mode=IN3
@@ -101,7 +98,7 @@ PA6.Mode=IN6
 PA6.Signal=ADC_IN6
 PA7.Mode=IN7
 PA7.Signal=ADC_IN7
-PA9.Mode=Asynchronous
+PA9.Mode=Multiprocessor_communication
 PA9.Signal=USART1_TX
 PB0.Mode=IN8
 PB0.Signal=ADC_IN8
@@ -117,26 +114,18 @@ PB15.Mode=IN21
 PB15.Signal=ADC_IN21
 PB2.Mode=IN0b
 PB2.Signal=ADC_IN0b
-PB3.Locked=true
+PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-TRACESWO
-PB4.Locked=true
-PB4.Signal=SYS_JTRST
-PB5.Mode=SMBus-Alert-mode
-PB5.Signal=I2C1_SMBA
-PB6.Mode=SMBus-Alert-mode
-PB6.Signal=I2C1_SCL
-PB7.Mode=SMBus-Alert-mode
-PB7.Signal=I2C1_SDA
 PC0.Mode=IN10
 PC0.Signal=ADC_IN10
 PC1.Mode=IN11
 PC1.Signal=ADC_IN11
-PC10.Mode=Full_Duplex_Slave
-PC10.Signal=SPI3_SCK
-PC11.Mode=Full_Duplex_Slave
-PC11.Signal=SPI3_MISO
-PC12.Mode=Full_Duplex_Slave
-PC12.Signal=SPI3_MOSI
+PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC2.Mode=IN12
 PC2.Signal=ADC_IN12
 PC3.Mode=IN13
@@ -153,18 +142,31 @@ PCC.Seq0=0
 PCC.Series=STM32L1
 PCC.Temperature=25
 PCC.Vdd=3.0
-PD5.Mode=Multiprocessor_communication
-PD5.Signal=USART2_TX
-PD6.Mode=Multiprocessor_communication
-PD6.Signal=USART2_RX
+PD0.Mode=NSS_Signal_Hard_Input
+PD0.Signal=SPI2_NSS
+PD1.Mode=Full_Duplex_Slave
+PD1.Signal=SPI2_SCK
+PD3.Mode=Full_Duplex_Slave
+PD3.Signal=SPI2_MISO
+PD4.Mode=Full_Duplex_Slave
+PD4.Signal=SPI2_MOSI
 PE10.Mode=IN25
 PE10.Signal=ADC_IN25
+PE6-WKUP3.Locked=true
+PE6-WKUP3.Mode=SYS_WakeUp2
+PE6-WKUP3.Signal=SYS_WKUP3
 PE7.Mode=IN22
 PE7.Signal=ADC_IN22
 PE8.Mode=IN23
 PE8.Signal=ADC_IN23
 PE9.Mode=IN24
 PE9.Signal=ADC_IN24
+PH0-OSC_IN.Locked=true
+PH0-OSC_IN.Mode=HSE-External-Oscillator
+PH0-OSC_IN.Signal=RCC_OSC_IN
+PH1-OSC_OUT.Locked=true
+PH1-OSC_OUT.Mode=HSE-External-Oscillator
+PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -186,14 +188,14 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=line-sensor-var1a-r2.ioc
-ProjectManager.ProjectName=line-sensor-var1a-r2
+ProjectManager.ProjectFileName=line-sensor-var1a-r3.ioc
+ProjectManager.ProjectName=line-sensor-var1a-r3
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_ADC_Init-ADC-false-LL-true,4-MX_I2C1_Init-I2C1-false-LL-true,5-MX_SPI3_Init-SPI3-false-LL-true,6-MX_USART2_UART_Init-USART2-false-LL-true,7-MX_USART1_UART_Init-USART1-false-LL-true
-RCC.48MHZClocksFreq_Value=32000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_ADC_Init-ADC-false-LL-true,4-MX_USART1_UART_Init-USART1-false-LL-true,5-MX_IWDG_Init-IWDG-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true
+RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
 RCC.APB1TimFreq_Value=32000000
@@ -204,13 +206,14 @@ RCC.FamilyName=M
 RCC.HCLKFreq_Value=32000000
 RCC.HSE_VALUE=24000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,VCOOutputFreq_Value
-RCC.LSE_VALUE=32768
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLDIV,PLLMUL,PLLSourceVirtual,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
 RCC.LSI_VALUE=37000
 RCC.MCOPinFreq_Value=32000000
 RCC.MSI_VALUE=2097000
 RCC.PLLCLKFreq_Value=32000000
+RCC.PLLDIV=RCC_PLL_DIV3
 RCC.PLLMUL=RCC_PLL_MUL4
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=32000000
 RCC.RTCFreq_Value=37000
 RCC.RTCHSEDivFreq_Value=12000000
@@ -218,20 +221,21 @@ RCC.SYSCLKFreq_VALUE=32000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TIMFreq_Value=32000000
 RCC.TimerFreq_Value=32000000
-RCC.VCOOutputFreq_Value=64000000
-SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,VirtualNSS
-SPI3.Mode=SPI_MODE_SLAVE
-SPI3.VirtualNSS=VM_NSSHARD
-SPI3.VirtualType=VM_SLAVE
+RCC.VCOInputFreq_Value=24000000
+RCC.VCOOutputFreq_Value=96000000
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,VirtualNSS
+SPI2.Mode=SPI_MODE_SLAVE
+SPI2.VirtualNSS=VM_NSSHARD
+SPI2.VirtualType=VM_SLAVE
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
-USART2.IPParameters=VirtualMode
-USART2.VirtualMode=VM_ASYNC
 VP_ADC_Channel3SpeedFast.Mode=Channel3SpeedFast
 VP_ADC_Channel3SpeedFast.Signal=ADC_Channel3SpeedFast
 VP_ADC_Channel8SpeedFast.Mode=Channel8SpeedFast
 VP_ADC_Channel8SpeedFast.Signal=ADC_Channel8SpeedFast
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
