--- a/software/line-sensor-wireless-interface/src-mcu-config/src-mcu-config.ioc
+++ b/software/line-sensor-wireless-interface/src-mcu-config/src-mcu-config.ioc
@@ -1,24 +1,62 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=SPI1_RX
+Dma.Request1=SPI1_TX
+Dma.RequestsNb=2
+Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.0.EventEnable=DISABLE
+Dma.SPI1_RX.0.Instance=DMA1_Channel1
+Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.0.Mode=DMA_NORMAL
+Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_RX.0.Priority=DMA_PRIORITY_HIGH
+Dma.SPI1_RX.0.RequestNumber=1
+Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_RX.0.SignalID=NONE
+Dma.SPI1_RX.0.SyncEnable=DISABLE
+Dma.SPI1_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_RX.0.SyncRequestNumber=1
+Dma.SPI1_RX.0.SyncSignalID=NONE
+Dma.SPI1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.1.EventEnable=DISABLE
+Dma.SPI1_TX.1.Instance=DMA1_Channel2
+Dma.SPI1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.1.Mode=DMA_NORMAL
+Dma.SPI1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_TX.1.Priority=DMA_PRIORITY_HIGH
+Dma.SPI1_TX.1.RequestNumber=1
+Dma.SPI1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_TX.1.SignalID=NONE
+Dma.SPI1_TX.1.SyncEnable=DISABLE
+Dma.SPI1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_TX.1.SyncRequestNumber=1
+Dma.SPI1_TX.1.SyncSignalID=NONE
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32WB
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=RF
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IP6=USB
-Mcu.IPNb=7
+Mcu.IP0=DMA
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=RF
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=USART1
+Mcu.IP7=USB
+Mcu.IPNb=8
 Mcu.Name=STM32WB55RGVx
 Mcu.Package=VFQFPN68
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=RF1
-Mcu.Pin11=OSC_OUT
-Mcu.Pin12=OSC_IN
-Mcu.Pin13=PB0
-Mcu.Pin14=PB1
+Mcu.Pin10=OSC_OUT
+Mcu.Pin11=OSC_IN
+Mcu.Pin12=PB0
+Mcu.Pin13=PB1
+Mcu.Pin14=PB12
 Mcu.Pin15=PA11
 Mcu.Pin16=PA12
 Mcu.Pin17=PA13
@@ -29,13 +67,13 @@ Mcu.Pin20=PB5
 Mcu.Pin21=PB6
 Mcu.Pin22=PB7
 Mcu.Pin23=VP_SYS_VS_Systick
-Mcu.Pin3=PC1
-Mcu.Pin4=PC2
-Mcu.Pin5=PA1
-Mcu.Pin6=PA4
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PC4
+Mcu.Pin7=PB2
+Mcu.Pin8=PB11
+Mcu.Pin9=RF1
 Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -43,6 +81,8 @@ Mcu.UserName=STM32WB55RGVx
 MxCube.Version=5.3.0
 MxDb.Version=DB.5.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -56,8 +96,6 @@ OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
 OSC_OUT.Mode=HSE-External-Oscillator
 OSC_OUT.Signal=RCC_OSC_OUT
-PA1.Mode=Full_Duplex_Master
-PA1.Signal=SPI1_SCK
 PA11.Locked=true
 PA11.Mode=Device
 PA11.Signal=USB_DM
@@ -67,8 +105,9 @@ PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
-PA4.Mode=NSS_Signal_Hard_Output
-PA4.Signal=SPI1_NSS
+PA5.Locked=true
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
@@ -77,6 +116,12 @@ PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.Locked=true
 PB1.Signal=GPIO_Output
+PB11.Locked=true
+PB11.Signal=GPIO_Output
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
 PB5.Locked=true
@@ -87,16 +132,12 @@ PB6.Signal=USART1_TX
 PB7.Locked=true
 PB7.Mode=Multiprocessor_communication
 PB7.Signal=USART1_RX
-PC1.Locked=true
-PC1.Signal=GPIO_Output
 PC13.Locked=true
 PC13.Signal=GPIO_Input
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.Locked=true
-PC2.Signal=GPIO_Output
 PC4.Locked=true
 PC4.Signal=GPIO_Input
 PCC.Ble.ConnectionInterval=1000.0
@@ -196,9 +237,8 @@ RF1.Mode=RF1_Activate
 RF1.Signal=RF_RF1
 SPI1.CalculateBaudRate=32.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode-Multiprocessor_communication
 USART1.VirtualMode-Multiprocessor_communication=VM_ASYNC
