--- a/software/line-sensor-wireless-interface/src-mcu-config/src-mcu-config.ioc
+++ b/software/line-sensor-wireless-interface/src-mcu-config/src-mcu-config.ioc
@@ -1,88 +1,49 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=SPI1_RX
-Dma.Request1=SPI1_TX
-Dma.RequestsNb=2
-Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.0.EventEnable=DISABLE
-Dma.SPI1_RX.0.Instance=DMA1_Channel1
-Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.0.Mode=DMA_NORMAL
-Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI1_RX.0.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_RX.0.RequestNumber=1
-Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI1_RX.0.SignalID=NONE
-Dma.SPI1_RX.0.SyncEnable=DISABLE
-Dma.SPI1_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI1_RX.0.SyncRequestNumber=1
-Dma.SPI1_RX.0.SyncSignalID=NONE
-Dma.SPI1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI1_TX.1.EventEnable=DISABLE
-Dma.SPI1_TX.1.Instance=DMA1_Channel2
-Dma.SPI1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_TX.1.Mode=DMA_NORMAL
-Dma.SPI1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI1_TX.1.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_TX.1.RequestNumber=1
-Dma.SPI1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI1_TX.1.SignalID=NONE
-Dma.SPI1_TX.1.SyncEnable=DISABLE
-Dma.SPI1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI1_TX.1.SyncRequestNumber=1
-Dma.SPI1_TX.1.SyncSignalID=NONE
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32WB
-Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=RF
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IP7=USB
-Mcu.IPNb=8
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=RF
+Mcu.IP3=SPI2
+Mcu.IP4=SYS
+Mcu.IP5=USART1
+Mcu.IP6=USB
+Mcu.IPNb=7
 Mcu.Name=STM32WB55RGVx
 Mcu.Package=VFQFPN68
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=OSC_OUT
-Mcu.Pin11=OSC_IN
-Mcu.Pin12=PB0
-Mcu.Pin13=PB1
-Mcu.Pin14=PB12
-Mcu.Pin15=PA11
-Mcu.Pin16=PA12
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PB3
+Mcu.Pin10=OSC_IN
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PB12
+Mcu.Pin14=PA11
+Mcu.Pin15=PA12
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PD0
+Mcu.Pin19=PD1
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB5
-Mcu.Pin21=PB6
-Mcu.Pin22=PB7
-Mcu.Pin23=VP_SYS_VS_Systick
-Mcu.Pin3=PA5
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-Mcu.Pin6=PC4
-Mcu.Pin7=PB2
-Mcu.Pin8=PB11
-Mcu.Pin9=RF1
-Mcu.PinsNb=24
+Mcu.Pin20=PB3
+Mcu.Pin21=PB5
+Mcu.Pin22=PB6
+Mcu.Pin23=PB7
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin3=PC1
+Mcu.Pin4=PC2
+Mcu.Pin5=PC4
+Mcu.Pin6=PB2
+Mcu.Pin7=PB11
+Mcu.Pin8=RF1
+Mcu.Pin9=OSC_OUT
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32WB55RGVx
 MxCube.Version=5.3.0
 MxDb.Version=DB.5.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -105,13 +66,6 @@ PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
-PA5.Locked=true
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.Locked=true
@@ -132,12 +86,16 @@ PB6.Signal=USART1_TX
 PB7.Locked=true
 PB7.Mode=Multiprocessor_communication
 PB7.Signal=USART1_RX
+PC1.Mode=Full_Duplex_Master
+PC1.Signal=SPI2_MOSI
 PC13.Locked=true
 PC13.Signal=GPIO_Input
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.Mode=Full_Duplex_Master
+PC2.Signal=SPI2_MISO
 PC4.Locked=true
 PC4.Signal=GPIO_Input
 PCC.Ble.ConnectionInterval=1000.0
@@ -152,6 +110,12 @@ PCC.Seq0=0
 PCC.Series=STM32WB
 PCC.Temperature=25
 PCC.Vdd=3.0
+PD0.Locked=true
+PD0.Mode=NSS_Signal_Hard_Input
+PD0.Signal=SPI2_NSS
+PD1.Locked=true
+PD1.Mode=Full_Duplex_Master
+PD1.Signal=SPI2_SCK
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -235,11 +199,12 @@ RCC.VCOOutputFreq_Value=128000000
 RCC.VCOSAI1OutputFreq_Value=96000000
 RF1.Mode=RF1_Activate
 RF1.Signal=RF_RF1
-SPI1.CalculateBaudRate=32.0 MBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
+SPI2.CalculateBaudRate=32.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualNSS=VM_NSSHARD
+SPI2.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode-Multiprocessor_communication
 USART1.VirtualMode-Multiprocessor_communication=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
